--- a/projekt/Wizualizacja.html
+++ b/projekt/Wizualizacja.html
@@ -31,7 +31,7 @@ function myFunction() {
 <div class="pasek_boczny">
  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
-  <h3> <b>Wizualizacja</b></h3>
+  <h3> <b>Wizualizacja kota</b></h3>
   <a href="wizualizacja.html">szkielet</a>
 	<a href="czaszka.html">czaszka</a>
   <a href="odcinekp.html">kręgi piersiowe</a>
